[package]
name = "aleo-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
app_dirs = { package = "app_dirs2", version = "2.5" }
bincode = { version = "1.3.3" }
bs58 = "0.5.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
common = "0.1.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono"] }
deadpool = "0.9.5"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snarkvm = { version = "0.16.8" }
jni = { version = "0.21.1" }
uuid = { version = "1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rand = "0.8.5"
security-framework = "2.9.1"
security-framework-sys = "2.9.0"
tokio = "1.32.0"
chrono = {version="0.4.27", features=["serde"]}
rust-argon2 = "1.0.0"
duration-str = "0.7.0"
tracing = "0.1.37"
url = "2.4.1"
once_cell = "1.18.0"
ureq = {version = "2.7.1", features = ["json"] }
hex = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
temp-env = "0.3.1"
rstest = "0.17.0"
tempfile = "3.5.0"
mockall = "0.11.2"

[patch.crates-io]
security-framework = { git = "https://github.com/AvailX/rust-security-framework" }
security-framework-sys = { git = "https://github.com/AvailX/rust-security-framework" }