[package]
name = "aleo-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snarkvm = { version = "0.16.8" }
rand = "0.8.5"
once_cell = "1.18.0"
ureq = "2.8.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
temp-env = "0.3.1"
rstest = "0.17.0"
tempfile = "3.5.0"
mockall = "0.11.2"
